--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed</title>
-    <link rel="shortcut icon" href="../icons/faviconIcon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="shortcut icon" href="./static/icons/faviconIcon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./static/css/footer.css">
+    <link rel="stylesheet" href="./static/css/main.css">
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
             <div class="info-publication">
                 <img class="accountPic-publication" src="https://th.bing.com/th/id/OIP.hZAW1qjMuXkTFEdJkFcDTQHaHa?rs=1&pid=ImgDetMain">
                 <span>Raissinha Adoções</span>
-                <img class="moreOptions-publication" src="../icons/moreOptionsIcon.png">
+                <img class="moreOptions-publication" src="./static/icons/moreOptionsIcon.png">
             </div>
             <div class="adopt-div">
                 <input class="adoptButton" type="button" value="ADOTAR">
@@ -27,7 +27,7 @@
             <div class="interaction">
                 <p>190.000 curtidas</p>
                 <div>
-                    <img src="../icons/shareIcon.png">
+                    <img src="./static/icons/shareIcon.png">
                     <div class="like"></div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
             <div class="info-publication">
                 <img class="accountPic-publication" src="https://th.bing.com/th/id/OIP.hZAW1qjMuXkTFEdJkFcDTQHaHa?rs=1&pid=ImgDetMain">
                 <span>Jurisvaldo da Silva</span>
-                <img class="moreOptions-publication" src="../icons/moreOptionsIcon.png">
+                <img class="moreOptions-publication" src="./static/icons/moreOptionsIcon.png">
             </div>
             <div class="adopt-div">
                 <input class="adoptButton" type="button" value="ADOTAR">
@@ -46,7 +46,7 @@
             <div class="interaction">
                 <p>190.000 curtidas</p>
                 <div>
-                    <img src="../icons/shareIcon.png">
+                    <img src="./static/icons/shareIcon.png">
                     <div class="like"></div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
             <div class="info-publication">
                 <img class="accountPic-publication" src="https://th.bing.com/th/id/OIP.hZAW1qjMuXkTFEdJkFcDTQHaHa?rs=1&pid=ImgDetMain">
                 <span>Julio Reis Dev</span>
-                <img class="moreOptions-publication" src="../icons/moreOptionsIcon.png">
+                <img class="moreOptions-publication" src="./static/icons/moreOptionsIcon.png">
             </div>
             <div class="adopt-div">
                 <input class="adoptButton" type="button" value="ADOTAR">
@@ -65,7 +65,7 @@
             <div class="interaction">
                 <p>190.000 curtidas</p>
                 <div>
-                    <img src="../icons/shareIcon.png">
+                    <img src="./static/icons/shareIcon.png">
                     <div class="like"></div>
                 </div>
             </div>
@@ -75,12 +75,12 @@
 
     <footer> <!--Natalhia Fonseca-->
         <div>
-            <img src="../icons/homeIcon.png" alt="">
-            <img src="../icons/searchIcon.png" alt="">
-            <img src="../icons/addIcon.png" alt="">
-            <img src="../icons/accountIcon.png" alt="">
-            </div> 
+            <img src="./static/icons/homeIcon.png" alt="">
+            <img src="./static/icons/searchIcon.png" alt="">
+            <img src="./static/icons/addIcon.png" alt="">
+            <img src="./static/icons/accountIcon.png" alt="">
+        </div> 
     </footer>
-    <script src="../javascript/styles.js"></script>
+    <script src="./static/javascript/styles.js"></script>
 </body>
 </html>
