--- a/index.html
+++ b/index.html
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
     <title>Feed</title>
-    <link rel="shortcut icon" href="./static/icons/faviconIcon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./static/css/footer.css">
-    <link rel="stylesheet" href="./static/css/main.css">
+    <link rel="shortcut icon"
+        href="./static/icons/faviconIcon.png"
+        type="image/x-icon">
+    <link rel="stylesheet"
+        href="./static/css/footer.css">
+    <link rel="stylesheet"
+        href="./static/css/main.css">
 </head>
+
 <body>
     <header>
 
     </header>
 
-    <main> <!--Samuel-->
+    <main>
+        <!--Samuel-->
         <div class="publication">
             <div class="info-publication">
-                <img class="accountPic-publication" src="https://th.bing.com/th/id/OIP.hZAW1qjMuXkTFEdJkFcDTQHaHa?rs=1&pid=ImgDetMain">
+                <img class="accountPic-publication"
+                    src="https://th.bing.com/th/id/OIP.hZAW1qjMuXkTFEdJkFcDTQHaHa?rs=1&pid=ImgDetMain">
                 <span>Raissinha Adoções</span>
-                <img class="moreOptions-publication" src="./static/icons/moreOptionsIcon.png">
+                <img class="moreOptions-publication"
+                    src="./static/icons/moreOptionsIcon.png">
+                    <div class="moreOption-div">
+                        <p>Denunciar</p>
+                    </div>
             </div>
             <div class="adopt-div">
-                <input class="adoptButton" type="button" value="ADOTAR">
+                <input class="adoptButton"
+                    type="button" value="ADOTAR">
             </div>
-            <img class="pic-publication" src="https://i.pinimg.com/originals/a0/c0/51/a0c051aa6d6d8006b45ace190b4f27af.jpg">
+            <img class="pic-publication"
+                src="https://i.pinimg.com/originals/a0/c0/51/a0c051aa6d6d8006b45ace190b4f27af.jpg">
             <div class="interaction">
                 <p>190.000 curtidas</p>
                 <div>
-                    <img src="./static/icons/shareIcon.png">
+                    <img
+                        src="./static/icons/shareIcon.png">
                     <div class="like"></div>
                 </div>
             </div>
@@ -35,18 +51,26 @@
 
         <div class="publication">
             <div class="info-publication">
-                <img class="accountPic-publication" src="https://th.bing.com/th/id/OIP.hZAW1qjMuXkTFEdJkFcDTQHaHa?rs=1&pid=ImgDetMain">
+                <img class="accountPic-publication"
+                    src="https://th.bing.com/th/id/OIP.hZAW1qjMuXkTFEdJkFcDTQHaHa?rs=1&pid=ImgDetMain">
                 <span>Jurisvaldo da Silva</span>
-                <img class="moreOptions-publication" src="./static/icons/moreOptionsIcon.png">
+                <img class="moreOptions-publication"
+                    src="./static/icons/moreOptionsIcon.png">
+                    <div class="moreOption-div">
+                        <p>Denunciar</p>
+                    </div>
             </div>
             <div class="adopt-div">
-                <input class="adoptButton" type="button" value="ADOTAR">
+                <input class="adoptButton"
+                    type="button" value="ADOTAR">
             </div>
-            <img class="pic-publication" src="https://th.bing.com/th/id/OIP.hoPElukaoAZ1T_g21-Bm-QHaHa?w=221&h=220&c=7&r=0&o=5&pid=1.7">
+            <img class="pic-publication"
+                src="https://th.bing.com/th/id/OIP.hoPElukaoAZ1T_g21-Bm-QHaHa?w=221&h=220&c=7&r=0&o=5&pid=1.7">
             <div class="interaction">
                 <p>190.000 curtidas</p>
                 <div>
-                    <img src="./static/icons/shareIcon.png">
+                    <img
+                        src="./static/icons/shareIcon.png">
                     <div class="like"></div>
                 </div>
             </div>
@@ -54,18 +78,26 @@
 
         <div class="publication">
             <div class="info-publication">
-                <img class="accountPic-publication" src="https://th.bing.com/th/id/OIP.hZAW1qjMuXkTFEdJkFcDTQHaHa?rs=1&pid=ImgDetMain">
+                <img class="accountPic-publication"
+                    src="https://th.bing.com/th/id/OIP.hZAW1qjMuXkTFEdJkFcDTQHaHa?rs=1&pid=ImgDetMain">
                 <span>Julio Reis Dev</span>
-                <img class="moreOptions-publication" src="./static/icons/moreOptionsIcon.png">
+                <img class="moreOptions-publication"
+                    src="./static/icons/moreOptionsIcon.png">
+                    <div class="moreOption-div">
+                        <p>Denunciar</p>
+                    </div>
             </div>
             <div class="adopt-div">
-                <input class="adoptButton" type="button" value="ADOTAR">
+                <input class="adoptButton"
+                    type="button" value="ADOTAR">
             </div>
-            <img class="pic-publication" src="https://th.bing.com/th/id/OIP.aCSya8_GDfQm_fnFHUq8xgHaHS?w=170&h=180&c=7&r=0&o=5&pid=1.7">
+            <img class="pic-publication"
+                src="https://th.bing.com/th/id/OIP.aCSya8_GDfQm_fnFHUq8xgHaHS?w=170&h=180&c=7&r=0&o=5&pid=1.7">
             <div class="interaction">
                 <p>190.000 curtidas</p>
                 <div>
-                    <img src="./static/icons/shareIcon.png">
+                    <img
+                        src="./static/icons/shareIcon.png">
                     <div class="like"></div>
                 </div>
             </div>
@@ -73,14 +105,21 @@
     </main>
 
 
-    <footer> <!--Natalhia Fonseca-->
+    <footer>
+        <!--Natalhia Fonseca-->
         <div>
-            <img src="./static/icons/homeIcon.png" alt="">
-            <img src="./static/icons/searchIcon.png" alt="">
-            <img src="./static/icons/addIcon.png" alt="">
-            <img src="./static/icons/accountIcon.png" alt="">
-        </div> 
+            <img src="./static/icons/homeIcon.png"
+                alt="">
+            <img src="./static/icons/searchIcon.png"
+                alt="">
+            <img src="./static/icons/addIcon.png"
+                alt="">
+            <img src="./static/icons/accountIcon.png"
+                alt="">
+        </div>
     </footer>
-    <script src="./static/javascript/styles.js"></script>
+    <script src="./static/javascript/styles.js">
+    </script>
 </body>
+
 </html>
