--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="interaction">
                 <p>190.000 curtidas</p>
                 <div>
-                    <img src="./static/icons/shareIcon.png">
+                    <img class="share" src="./static/icons/shareIcon.png">
                     <div class="like"></div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
             <div class="interaction">
                 <p>190.000 curtidas</p>
                 <div>
-                    <img src="./static/icons/shareIcon.png">
+                    <img class="share" src="./static/icons/shareIcon.png">
                     <div class="like"></div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
             <div class="interaction">
                 <p>190.000 curtidas</p>
                 <div>
-                    <img src="./static/icons/shareIcon.png">
+                    <img class="share" src="./static/icons/shareIcon.png">
                     <div class="like"></div>
                 </div>
             </div>
